--- a/index.html.save.1
+++ b/index.html.save.1
@@ -11,14 +11,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <div class="top-bar">
+  <a href="https://calchiwo.github.io/WodiWideWeb/" class="back-button">← Back to Home</a>
+  
   <div class="top-right-buttons">
     <button id="light-mode-btn" title="Light Mode">🌞</button>
     <button id="dark-mode-btn" title="Dark Mode">🌛</button>
     <button id="copy-link-btn" title="Copy Link">🔗</button>
   </div>
-</div>
-  <header>
+</div>  <header>
     <h1>Welcome to WodiWideWeb</h1>
     <p class="date">The story behind the scene.</p>
     <img src="WodiWideWeb.jpg" alt="Homepage banner: WodiWideWeb Logo by Caleb Wodi" class="featured-img">
@@ -81,6 +83,6 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     };
   </script>
-<script src="../main.js"></script>
+
 </body>
 </html>
