--- a/index.html.save.2
+++ b/index.html.save.2
@@ -8,7 +8,7 @@
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.com">
-  <link rel="stylesheet" href="styles.css?v=12">
+  <link rel="stylesheet" href="styles.css?v=11">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -24,20 +24,36 @@
   <meta name="twitter:image" content="WodiWideWeb.jpg">
 </head>
 <body>
-  <div class="top-bar">
+  <!-- Top Navigation Bar -->
+<div class="top-bar">
   <div class="top-left-button">
-    <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading"> Start ↓</button>
+    <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading">Start ↓</button>
   </div>
   <div class="top-right-buttons">
     <button id="light-mode-btn" title="Light Mode" aria-label="Light Mode">🌞</button>
     <button id="dark-mode-btn" title="Dark Mode" aria-label="Dark Mode">🌛</button>
     <button id="copy-link-btn" title="Share this page" aria-label="Share this page" class="share-button">
-      <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 24 24" width="40" fill="currentColor">
-        <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.062 3.062 0 000-.81l7.05-4.11A2.993 2.993 0 0018 7.91c1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17c-.31 0-.61-.05-.89-.14l-7.05 4.11c.05.26.08.53.08.81 0 1.65-1.34 3-3 3s-3-1.35-3-3 1.34-3 3-3c.76 0 1.44.3 1.96.77l7.12-4.15a3.14 3.14 0 000-.81L9.96 7.24A3.003 3.003 0 006 9.91c-1.66 0-3-1.35-3-3s1.34-3 3-3 3 1.35 3 3c0 .28-.03.55-.08.81l7.05 4.11c.45-.28.97-.45 1.54-.45 1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17z"/>
+      <svg xmlns="http:                                                                                      
+        <path d="M18 16.08c-.76 0-1.44.3-1.96.77l-7.05-4.11a3.062 3.062 0 000-.81l7.05-4.11A2.993 2.993 0 0018 7.91c1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17c-.31 0-.61-.05-.89-.14l-7.05 4.1c.17.29.29.62.29.98 0 1.66-1.35 3-3 3S3 20.66 3 19s1.35-3 3-3c.76 0 1.44.3 1.96.77l7.05-4.11a3.062 3.062 0 000-.81L7.96 7.74A2.993 2.993 0 006 7.91c-1.66 0-3 1.35-3 3s1.34 3.17 3 3.17c.31 0 .61-.05.89-.14l7.05 4.1c-.17.29-.29.62-.29.98 0 1.66 1.35 3 3 3s3-1.34 3-3-1.34-3.17-3-3.17z"/>
       </svg>
     </button>
   </div>
 </div>
+
+  <div class="top-bar">
+    <div class="top-left-button">
+      <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading"> Start ↓</button>
+    </div>
+    <div class="top-right-buttons">
+      <button id="light-mode-btn" title="Light Mode" aria-label="Light Mode">🌞</button>
+      <button id="dark-mode-btn" title="Dark Mode" aria-label="Dark Mode">🌛</button>
+      <button id="copy-link-btn" title="Share this page" aria-label="Share this page" class="share-button">
+  <svg xmlns="http://www.w3.org/2000/svg" height="40" viewBox="0 0 24 24" width="40" fill="currentColor">
+    <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.062 3.062 0 000-.81l7.05-4.11A2.993 2.993 0 0018 7.91c1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17c-.31 0-.61-.05-.89-.14l-7.05 4.11c.05.26.08.53.08.81 0 1.65-1.34 3-3 3s-3-1.35-3-3 1.34-3 3-3c.76 0 1.44.3 1.96.77l7.12-4.15a3.14 3.14 0 000-.81L9.96 7.24A3.003 3.003 0 006 9.91c-1.66 0-3-1.35-3-3s1.34-3 3-3 3 1.35 3 3c0 .28-.03.55-.08.81l7.05 4.11c.45-.28.97-.45 1.54-.45 1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17z"/>
+  </svg>
+</button>
+    </div>
+  </div>
 
   <header>
     <h1>Welcome to WodiWideWeb</h1>
