Added JS shaky effect to alert button

--- a/main.js.save.3
+++ b/main.js.save.3
@@ -31,7 +31,9 @@ copyBtn?.addEventListener('click', () => {
 document.getElementById('scrollToStart')?.addEventListener('click', function () {
   document.querySelector('.start-reading')?.scrollIntoView({ behavior: 'smooth' });
 });
-// Delay shake effect to draw attention after page load
-setTimeout(() => {
-  document.querySelector('.launch-alert').style.animation = 'shake 1.2s infinite';
-}, 1000);
+<scr
+  // Delay shake effect to draw attention after page load
+  setTimeout(() => {
+    document.querySelector('.launch-alert').style.animation = 'shake 1.2s infinite';
+  }, 1000);
+</script>
