--- a/index.html.save.8
+++ b/index.html.save.8
@@ -136,7 +136,7 @@
         </li>
         <li>
           <span class="icon">🎮</span>
-          <a href="https://wodiwideweb.netlify.app/WodiGames/games/go" target="_blank"><strong>WodiGames</strong></a> — Play fun, lightweight games built under BuiltByWodi® Projects.
+          <a href="https://wodiwideweb.netlify.app/WodiGames/games/go" target="_blank"><strong>Wodi Games</strong></a> — Play fun, lightweight games built under WodiWideWeb.
         </li>
         <li>
           <span class="icon">📖</span>
@@ -146,7 +146,7 @@
     </section>
 <!-- Newsletter Section -->
     <section class="newsletter">
-      <p>💌 Stay updated — <a href="https://WodiWaitlist.netlify.app" target="_blank">WodiWaitlist</a> — join my waitlist to get the latest stories and updates.</p>
+      <p>💌 Stay updated — <a href="https://WodiWaitlist.netlify.app" target="_blank">Join my waitlist</a> to get the latest stories and updates.</p>
     </section>
   <footer>
     <p>© 2025 Rocjet Technologies Ltd | BuiltByWodi®</p>
